--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -98,7 +98,7 @@
        "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -127,7 +127,7 @@
        "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -157,7 +157,9 @@
        " 'read_file',\n",
        " 'read_gdoc',\n",
        " 'read_gh_file',\n",
+       " 'read_gh_repo',\n",
        " 'read_gist',\n",
+       " 'read_git_path',\n",
        " 'read_google_sheet',\n",
        " 'read_html',\n",
        " 'read_pdf',\n",
@@ -165,7 +167,7 @@
        " 'read_yt_transcript']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -209,22 +211,22 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['async', 'core', 'toolloop'])"
+       "dict_keys(['async_docs', 'core_docs', 'toolloop_docs'])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "claudette_ctx = ct.claudette()\n",
+    "claudette_ctx = ct.ctx_claudette()\n",
     "claudette_ctx.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "language": "python"
    },
@@ -232,12 +234,12 @@
     {
      "data": {
       "text/plain": [
-       "{'async': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
-       " 'core': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
-       " 'toolloop': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
+       "{'async_docs': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
+       " 'core_docs': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
+       " 'toolloop_docs': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,34 +251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": false
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
