--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -188,7 +188,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['async', 'core', 'toolloop'])"
+       "dict_keys(['async_docs', 'core_docs', 'toolloop_docs'])"
       ]
      },
      "execution_count": null,
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "claudette_ctx = ct.claudette()\n",
+    "claudette_ctx = ct.ctx_claudette()\n",
     "claudette_ctx.keys()"
    ]
   },
@@ -209,9 +209,9 @@
     {
      "data": {
       "text/plain": [
-       "{'async': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
-       " 'core': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
-       " 'toolloop': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
+       "{'async_docs': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
+       " 'core_docs': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
+       " 'toolloop_docs': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
       ]
      },
      "execution_count": null,
