--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8dbe1eaa",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7b15582f",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0e50fa0",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9f1ebfb6",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34bbd7c5",
    "metadata": {},
    "outputs": [],
@@ -189,17 +189,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ef1f068c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'  * Home\\n  * Learn\\n\\n  * __\\n  * __\\n\\n__\\n\\n  1. Get Started\\n\\n  * Get Started\\n\\n  * Tutorials __\\n\\n    * FastHTML By Example\\n\\n    * Web Devs Quickstart\\n\\n    * JS App Walkthrough\\n\\n  * Explanations __\\n\\n    * *'"
+       "'  * Home\\n  * Learn\\n\\n  * __\\n  * __\\n\\n__\\n\\n  1. Get Started\\n\\n  * Get Started\\n\\n  * Tutorials __\\n\\n    * FastHTML By Example\\n\\n    * Web Devs Quickstart\\n\\n    * JS App Walkthrough\\n\\n    * Using Jupyter to write'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,18 +214,7 @@
    "execution_count": null,
    "id": "e0e56fd2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'  * Home\\n  * Learn\\n\\n  * __\\n  * __\\n\\n__\\n\\n  1. Get Started\\n\\n  * Get Started\\n\\n  * Tutorials __\\n\\n    * FastHTML By Example\\n\\n    * Web Devs Quickstart\\n\\n    * JS App Walkthrough\\n\\n  * Explanations __\\n\\n    * *'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| eval: false\n",
     "# contactless browser w/ playwrightnb\n",
@@ -250,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9308f909",
    "metadata": {},
    "outputs": [],
@@ -270,17 +259,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f8faab09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'#!/usr/bin/env python3\\nimport os, os.path, sys, socket, urllib.parse, base64\\nfrom pathlib import Path\\n\\ndef openurl(url):\\n    \"Under iTerm2, open the url\"\\n    b64_encoded_url=base64.b64encode(url.encod'"
+       "\"#!/usr/bin/env python3\\nimport os, os.path, sys, urllib.parse, base64, subprocess\\n\\ndef on_iterm2(): return 'ITERM_SESSION_ID' in os.environ or os.environ.get('LC_TERMINAL','') == 'iTerm2'\\n\\ndef on_macOS\""
       ]
      },
-     "execution_count": null,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b6058f6f",
    "metadata": {},
    "outputs": [],
@@ -311,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e6f53c92",
    "metadata": {},
    "outputs": [],
@@ -324,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dc15c66c",
    "metadata": {},
    "outputs": [
@@ -334,7 +323,7 @@
        "'https://raw.githubusercontent.com/hamelsmu/getrich-fasthtml/refs/heads/main/.gitignore'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "746101ae",
    "metadata": {},
    "outputs": [],
@@ -368,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "59c7cb64",
    "metadata": {},
    "outputs": [
@@ -378,7 +367,7 @@
        "'404: Not Found'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "db142751",
    "metadata": {},
    "outputs": [],
@@ -417,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "9e924a4f",
    "metadata": {},
    "outputs": [],
@@ -431,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a8991a53",
    "metadata": {},
    "outputs": [],
@@ -443,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "fcdb0366",
    "metadata": {},
    "outputs": [],
@@ -460,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5da0ad57",
    "metadata": {},
    "outputs": [],
@@ -478,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "81f30d9a",
    "metadata": {},
    "outputs": [],
@@ -488,9 +477,10 @@
     "             exclude_non_unicode=True,\n",
     "             included_patterns=[\"*\"],\n",
     "             excluded_patterns=[\".git/**\"],\n",
-    "             verbose=True):\n",
+    "             verbose=True,\n",
+    "             as_string=True):\n",
     "    pattern = '**/*'\n",
-    "    result = []\n",
+    "    result = {}\n",
     "    for file_path in glob.glob(os.path.join(path, pattern), recursive=True):\n",
     "        if any(fnmatch.fnmatch(file_path, pat) for pat in excluded_patterns):\n",
     "            continue\n",
@@ -501,16 +491,17 @@
     "                continue\n",
     "            if verbose:\n",
     "                print(f\"Including {file_path}\")\n",
-    "            result.append(f\"--- File: {file_path} ---\")\n",
     "            with open(file_path, 'r', errors='ignore') as f:\n",
-    "                result.append(f.read())\n",
-    "            result.append(f\"--- End of {file_path} ---\")\n",
-    "    return '\\n'.join(result)"
+    "                result[file_path] = f.read()\n",
+    "    if as_string:\n",
+    "        return '\\n'.join([f\"--- File: {file_path} ---\\n{v}\\n--- End of {file_path} ---\" for file_path,v in result.items()])\n",
+    "    else:\n",
+    "        return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "a498ea9c",
    "metadata": {},
    "outputs": [
@@ -520,7 +511,7 @@
        "'--- File: ./_quarto.yml ---\\nproject:\\n  type: website\\n\\nformat:\\n  html:\\n    theme: cosmo\\n    css: styles.css\\n    toc: true\\n    keep-md: true\\n  commonmark: default\\n\\nwebsite:\\n  twitter-card: true\\n  open-g'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,6 +763,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "import tempfile, subprocess, os, re, shutil\n",
     "from pathlib import Path"
    ]
@@ -901,6 +893,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
