--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -611,7 +611,7 @@
    ],
    "source": [
     "yt_url = \"https://youtu.be/MRtg6A1f2Ko?si=C7YZU6FFLdi6v9rk\"\n",
-    "s = read_yt_transcript(yt_url)\n",
+    "#s = read_yt_transcript(yt_url)\n",
     "s[:200]"
    ]
   },
