Add useJina to read_url

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -92,14 +92,17 @@
    "source": [
     "#| export\n",
     "def read_url(url, # url to read\n",
-    "             heavy=False, # Use contactless browser\n",
+    "             heavy=False, # Use headless browser\n",
     "             sel=None, # Css selector to pull content from\n",
+    "             useJina=False, # Use Jina for the markdown conversion\n",
     "             **kwargs): \n",
     "    \"Reads a url and converts to markdown\"\n",
-    "    if heavy: \n",
-    "        from playwrightnb import url2md\n",
-    "        url2md(url,sel=ifnone(sel,'body'), **kwargs)\n",
-    "    return read_html(url,**kwargs)"
+    "    if not heavy and not useJina: return read_html(url,sel=sel,**kwargs)\n",
+    "    elif not heavy and useJina:   return httpx.get(f\"https://r.jina.ai/{url}\").text\n",
+    "    elif heavy and not useJina: \n",
+    "        import playwrightnb\n",
+    "        return playwrightnb.url2md(url,sel=ifnone(sel,'body'), **kwargs)\n",
+    "    elif heavy and useJina: raise NotImplementedError(\"Unsupported. No benefit to using Jina with playwrightnb\")\n"
    ]
   },
   {
@@ -143,8 +146,73 @@
    ],
    "source": [
     "#| eval: false\n",
-    "# contactless browser w/ playwrightnb\n",
-    "read_url('https://docs.fastht.ml/', True)[:200]"
+    "# headless browser w/ playwrightnb\n",
+    "read_url('https://docs.fastht.ml/', heavy=True)[:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "061fa407",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Title: FastHTML – fasthtml\\n\\nURL Source: https://docs.fastht.ml/\\n\\nMarkdown Content:\\nWelcome to the official FastHTML documentation.\\n\\nFastHTML is a new next-generation web framework for fast, scalable w'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "read_url('https://docs.fastht.ml/',useJina=True)[:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ac33e79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'## On this page\\n\\n  * Installation\\n  * Usage\\n    * Getting help from AI\\n  * Next Steps\\n  * Other languages and related projects\\n\\n  * __Report an issue\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\n'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_url('https://docs.fastht.ml/',sel='#quarto-margin-sidebar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e479aa28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'## On this page\\n\\n  * Installation\\n  * Usage\\n    * Getting help from AI\\n  * Next Steps\\n  * Other languages and related projects\\n\\n  * __Report an issue\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\n'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "read_url('https://docs.fastht.ml/',sel='#quarto-margin-sidebar',heavy=True)"
    ]
   },
   {
