--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -27,10 +27,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install latest from the GitHub [repository][repo]:\n",
-    "\n",
-    "+ Clone the repo\n",
-    "+ `pip install -e .`"
+    "```\n",
+    "pip install contextkit\n",
+    "```"
    ]
   },
   {
@@ -80,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
+       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (33)\\n\\nai (20)\\n\\ncoding (5)\\n\\ncompany (2)\\n\\ncourses (1)\\n\\neducation (1)\\n\\ninterview (1)\\n\\nopen-source (14)\\n\\npolicy (4)\\n\\nproduct'"
       ]
      },
      "execution_count": null,
@@ -107,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (24)\\n\\nBlog (2)\\n\\n## Other Formats\\n\\n  *  __CommonMark\\n\\nAnswer.AI is a new kind of AI R&D lab which creates practical end-u'"
+       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (33)\\n\\nai (20)\\n\\ncoding (5)\\n\\ncompany (2)\\n\\ncourses (1)\\n\\neducation (1)\\n\\ninterview (1)\\n\\nopen-source (14)\\n\\npolicy (4)\\n\\nproduct'"
       ]
      },
      "execution_count": null,
@@ -155,72 +154,6 @@
    ],
    "source": [
     "[o for o in dir(rd) if o.startswith('read_')]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Pre-built Contexts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ContextKit.contexts as ct"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Prebuild contexts will always return a dictionary.  This allows you to choose what to use in model context"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['async_docs', 'core_docs', 'toolloop_docs'])"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "claudette_ctx = ct.ctx_claudette()\n",
-    "claudette_ctx.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'async_docs': '# The async version  ## Setup ## Async SDK ``` pyt ...',\n",
-       " 'core_docs': '# Claudette’s source  This is the ‘literate’ sourc ...',\n",
-       " 'toolloop_docs': \"# Tool loop  ``` python import os # os.environ['AN ...\"}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{k:f\"{v[:50]} ...\" for k,v in claudette_ctx.items()}"
    ]
   }
  ],
