Cleanup docment comments. Stop exporting read_gh

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -91,9 +91,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_url(url, # url to read\n",
-    "             heavy=False, # Use headless browser\n",
-    "             sel=None, # Css selector to pull content from\n",
+    "def read_url(url,           # URL to read\n",
+    "             heavy=False,   # Use headless browser\n",
+    "             sel=None,      # Css selector to pull content from\n",
     "             useJina=False, # Use Jina for the markdown conversion\n",
     "             **kwargs): \n",
     "    \"Reads a url and converts to markdown\"\n",
@@ -282,41 +282,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6f53c92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def github_url_to_raw(url):\n",
-    "    \"transform gh_file_url-like URLs to gh_raw_file_url-like URLs\"\n",
-    "    pattern = r'https://github\\.com/([^/]+)/([^/]+)/blob/([^/]+)/(.+)'\n",
-    "    replacement = r'https://raw.githubusercontent.com/\\1/\\2/refs/heads/\\3/\\4'\n",
-    "    return re.sub(pattern, replacement, url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc15c66c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://raw.githubusercontent.com/hamelsmu/getrich-fasthtml/refs/heads/main/.gitignore'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "github_url_to_raw(\"https://github.com/hamelsmu/getrich-fasthtml/blob/main/.gitignore\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "903ffa92",
    "metadata": {},
@@ -333,6 +298,7 @@
    "source": [
     "#| export\n",
     "def read_gh_file(url):\n",
+    "    \"Reads the contents of a file from its GitHub URL\"\n",
     "    pattern = r'https://github\\.com/([^/]+)/([^/]+)/blob/([^/]+)/(.+)'\n",
     "    replacement = r'https://raw.githubusercontent.com/\\1/\\2/refs/heads/\\3/\\4'\n",
     "    raw_url = re.sub(pattern, replacement, url)\n",
@@ -384,8 +350,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_file(path):\n",
-    "    return open(path,'r').read()"
+    "def read_file(path): return open(path,'r').read()"
    ]
   },
   {
@@ -398,8 +363,7 @@
     "#|export\n",
     "def is_unicode(filepath, sample_size=1024):\n",
     "    try:\n",
-    "        with open(filepath, 'r') as file:\n",
-    "            sample = file.read(sample_size)\n",
+    "        with open(filepath, 'r') as file: sample = file.read(sample_size)\n",
     "        return True\n",
     "    except UnicodeDecodeError:\n",
     "        return False"
@@ -431,12 +395,13 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_dir(path, \n",
-    "             exclude_non_unicode=True,\n",
-    "             included_patterns=[\"*\"],\n",
-    "             excluded_patterns=[\".git/**\"],\n",
-    "             verbose=True,\n",
-    "             as_string=True):\n",
+    "def read_dir(path,                          # path to read\n",
+    "             unicode_only=True,             # ignore non-unicode files\n",
+    "             included_patterns=[\"*\"],       # glob pattern of files to include\n",
+    "             excluded_patterns=[\".git/**\"], # glob pattern of files to exclude\n",
+    "             verbose=True,                  # log paths of files being read\n",
+    "             as_dict=False                  # returns dict of {path,content}\n",
+    "            ) -> str|dict:                  # returns string with contents of files read\n",
     "    pattern = '**/*'\n",
     "    result = {}\n",
     "    for file_path in glob.glob(os.path.join(path, pattern), recursive=True):\n",
@@ -445,13 +410,13 @@
     "        if not any(fnmatch.fnmatch(file_path, pat) for pat in included_patterns):\n",
     "            continue\n",
     "        if os.path.isfile(file_path):\n",
-    "            if exclude_non_unicode and not is_unicode(file_path):\n",
+    "            if unicode_only and not is_unicode(file_path):\n",
     "                continue\n",
     "            if verbose:\n",
     "                print(f\"Including {file_path}\")\n",
     "            with open(file_path, 'r', errors='ignore') as f:\n",
     "                result[file_path] = f.read()\n",
-    "    if as_string:\n",
+    "    if not as_dict:\n",
     "        return '\\n'.join([f\"--- File: {file_path} ---\\n{v}\\n--- End of {file_path} ---\" for file_path,v in result.items()])\n",
     "    else:\n",
     "        return result"
@@ -589,8 +554,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_google_sheet(orig_url):\n",
-    "    sheet_id = orig_url.split('/d/')[1].split('/')[0]\n",
+    "def read_google_sheet(url):\n",
+    "    sheet_id = url.split('/d/')[1].split('/')[0]\n",
     "    csv_url = f'https://docs.google.com/spreadsheets/d/{sheet_id}/export?format=csv&id={sheet_id}&gid=0'\n",
     "    res = requests.get(url=csv_url)\n",
     "    return res.content"
@@ -632,7 +597,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
     "def gdoc_url_to_parseable(url):\n",
     "    pattern = r'(https://docs\\.google\\.com/document/d/[^/]+)/edit'\n",
     "    replacement = r'\\1/export?format=html'\n",
@@ -721,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| hide\n",
     "import tempfile, subprocess, os, re, shutil\n",
     "from pathlib import Path"
    ]
@@ -733,8 +697,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "\n",
+    "#| hide\n",
     "def gh_ssh_from_gh_url(gh_repo_address):\n",
     "    \"Given a GH URL or SSH remote address, returns a GH URL or None\"\n",
     "    pattern = r'https://github\\.com/([^/]+)/([^/]+)(?:/.*)?'\n",
@@ -797,7 +760,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| hide\n",
     "def read_gh_repo(path_or_url):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
@@ -824,6 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| hide\n",
     "ghurl=\"https://github.com/AnswerDotAI/claudette\""
    ]
   },
@@ -832,15 +796,68 @@
    "execution_count": null,
    "id": "b347c101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "https://github.com/AnswerDotAI/claudette\n",
+      "b\n",
+      "Cloning repo.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'claudette'...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexis/.cache/contextkit_git_clones/claudette\n",
+      "Repo already cached. Updating.\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms.txt\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/00_core.ipynb\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/_quarto.yml\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/LICENSE\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/styles.css\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/CHANGELOG.md\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/CNAME\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms-ctx-full.txt\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/pyproject.toml\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/02_async.ipynb\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/MANIFEST.in\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/apilist.txt\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/README.md\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/setup.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/01_toolloop.ipynb\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/nbdev.yml\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms-ctx.txt\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/README.txt\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/settings.ini\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/index.ipynb\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/toolloop.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/_modidx.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/__init__.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/core.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/asink.py\n",
+      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/tools/refresh_llm_docs.sh\n"
+     ]
+    }
+   ],
    "source": [
-    "# s = read_gh_repo(ghurl)"
+    "#| hide\n",
+    "s = read_gh_repo(ghurl)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1183b88",
+   "id": "24e85fbc",
    "metadata": {},
    "outputs": [],
    "source": []
