in read_gh_repo, quiet logging and return as dict

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -727,7 +727,6 @@
     "    repo_dir = cache_dir / repo_name\n",
     "\n",
     "    if repo_dir.exists():\n",
-    "        print(\"Repo already cached. Updating.\")\n",
     "        try:\n",
     "            subprocess.run(['git', 'fetch'], cwd=repo_dir, check=True, capture_output=True)\n",
     "            default_branch = get_default_branch(repo_dir)\n",
@@ -746,11 +745,7 @@
     "            return str(repo_dir)\n",
     "        except subprocess.CalledProcessError as e:\n",
     "            print(f\"Error cloning repo from cwd {temp_dir} with error {e}\")\n",
-    "            return None\n",
-    "\n",
-    "def read_git_path(path):\n",
-    "    # TODO: ?enhance to read repos more specifically than directories\n",
-    "    return read_dir(path)"
+    "            return None\n"
    ]
   },
   {
@@ -761,15 +756,11 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "def read_gh_repo(path_or_url):\n",
+    "def read_gh_repo(path_or_url, as_dict=False, verbose=True):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = gh_ssh_from_gh_url(path_or_url)\n",
-    "    print('a')\n",
-    "    print(path_or_url)\n",
-    "    print('b')\n",
-    "    print(get_git_repo(gh_ssh))\n",
     "    path = path_or_url if not gh_ssh else get_git_repo(gh_ssh)\n",
-    "    return read_git_path(path)"
+    "    return read_dir(path,verbose=verbose,as_dict=as_dict)"
    ]
   },
   {
@@ -794,61 +785,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b3047f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = read_gh_repo(ghurl,as_dict=True)\n",
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1031b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = read_gh_repo(ghurl,as_dict=True,verbose=False)\n",
+    "d.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b347c101",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "https://github.com/AnswerDotAI/claudette\n",
-      "b\n",
-      "Cloning repo.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'claudette'...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/alexis/.cache/contextkit_git_clones/claudette\n",
-      "Repo already cached. Updating.\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms.txt\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/00_core.ipynb\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/_quarto.yml\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/LICENSE\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/styles.css\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/CHANGELOG.md\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/CNAME\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms-ctx-full.txt\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/pyproject.toml\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/02_async.ipynb\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/MANIFEST.in\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/apilist.txt\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/README.md\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/setup.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/01_toolloop.ipynb\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/nbdev.yml\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/llms-ctx.txt\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/README.txt\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/settings.ini\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/index.ipynb\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/toolloop.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/_modidx.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/__init__.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/core.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/claudette/asink.py\n",
-      "Including /Users/alexis/.cache/contextkit_git_clones/claudette/tools/refresh_llm_docs.sh\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
     "s = read_gh_repo(ghurl)"
