update to lowercase module name

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ContextKit\n",
+    "# contextkit\n",
     "\n",
     "> Reusable contexts for LLMs"
    ]
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ContextKit.read as rd"
+    "import contextkit.read as rd"
    ]
   },
   {
