--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -78,7 +78,9 @@
   {
    "cell_type": "markdown",
    "id": "0911d6a5",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### URL"
    ]
@@ -87,7 +89,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34bbd7c5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -109,7 +113,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef1f068c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -131,7 +137,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0e56fd2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -154,7 +162,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "061fa407",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -176,7 +186,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7ac33e79",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -197,7 +209,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e479aa28",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -218,7 +232,9 @@
   {
    "cell_type": "markdown",
    "id": "8f41a6a8",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Github"
    ]
@@ -226,7 +242,9 @@
   {
    "cell_type": "markdown",
    "id": "208dad18",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Gist"
    ]
@@ -235,7 +253,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9308f909",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -255,7 +275,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f8faab09",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -276,7 +298,9 @@
   {
    "cell_type": "markdown",
    "id": "fc6a81cd",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### URL"
    ]
@@ -284,7 +308,9 @@
   {
    "cell_type": "markdown",
    "id": "903ffa92",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### File"
    ]
@@ -293,7 +319,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "746101ae",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -309,7 +337,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "59c7cb64",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -329,7 +359,9 @@
   {
    "cell_type": "markdown",
    "id": "2ebc1f54",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Local Files"
    ]
@@ -337,7 +369,9 @@
   {
    "cell_type": "markdown",
    "id": "e9b3b8f9",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "####  Files"
    ]
@@ -346,7 +380,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "db142751",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -357,7 +393,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fcdb0366",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#|export\n",
@@ -373,7 +411,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5da0ad57",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "assert is_unicode('_quarto.yml')"
@@ -382,7 +422,9 @@
   {
    "cell_type": "markdown",
    "id": "0b4d45a2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Directory"
    ]
@@ -391,7 +433,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81f30d9a",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -426,7 +470,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a498ea9c",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -446,7 +492,9 @@
   {
    "cell_type": "markdown",
    "id": "dad1b4aa",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### PDF reader"
    ]
@@ -455,7 +503,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "164f189d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -469,7 +519,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22db8ce6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -489,7 +541,9 @@
   {
    "cell_type": "markdown",
    "id": "0b76babf",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### YT Transcript"
    ]
@@ -498,7 +552,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4abffe24",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -519,7 +575,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bd719b5e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -541,7 +599,9 @@
   {
    "cell_type": "markdown",
    "id": "fbe765cb",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Google Sheet"
    ]
@@ -550,7 +610,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "da885dd5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -565,7 +627,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "41c10b49",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -585,7 +649,9 @@
   {
    "cell_type": "markdown",
    "id": "b5bac4f4",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Google Doc"
    ]
@@ -594,7 +660,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2f55293f",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def gdoc_url_to_parseable(url):\n",
@@ -607,7 +675,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "05be287e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -627,7 +697,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4585ff5e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "#| export\n",
@@ -645,7 +717,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0c2e6e6e",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -664,7 +738,98 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65303b1",
+   "id": "093cb6ad",
+   "metadata": {},
+   "source": [
+    "### Arxiv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0c3c8d45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def read_arxiv(url, save_pdf=False, save_dir='.'):\n",
+    "    \"Get paper information from arxiv URL or ID, optionally saving PDF to disk\"\n",
+    "    import re, httpx, tarfile, io, os\n",
+    "    import xml.etree.ElementTree as ET\n",
+    "    \n",
+    "    # Create save directory if needed\n",
+    "    if save_pdf:\n",
+    "        os.makedirs(save_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Extract arxiv ID from URL or use directly if it's an ID\n",
+    "    arxiv_id = url.split('/')[-1] if '/' in url else url\n",
+    "    \n",
+    "    # Remove version number if present but save it for downloads\n",
+    "    version = re.search(r'v(\\d+)$', arxiv_id)\n",
+    "    version_num = version.group(1) if version else None\n",
+    "    arxiv_id = re.sub(r'v\\d+$', '', arxiv_id)\n",
+    "    \n",
+    "    # Construct API query URL\n",
+    "    api_url = f'http://export.arxiv.org/api/query?id_list={arxiv_id}'\n",
+    "    \n",
+    "    # Get response\n",
+    "    response = httpx.get(api_url)\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
+    "        raise Exception(f\"Failed to fetch arxiv data: {response.status_code}\")\n",
+    "    \n",
+    "    # Parse XML response\n",
+    "    root = ET.fromstring(response.text)\n",
+    "    ns = {'arxiv': 'http://www.w3.org/2005/Atom'}\n",
+    "    entry = root.find('arxiv:entry', ns)\n",
+    "    if entry is None:\n",
+    "        raise Exception(\"No paper found\")\n",
+    "    \n",
+    "    # Extract links including PDF\n",
+    "    links = entry.findall('arxiv:link', ns)\n",
+    "    pdf_url = next((l.get('href') for l in links if l.get('title') == 'pdf'), None)\n",
+    "    \n",
+    "    result = {\n",
+    "        'title': entry.find('arxiv:title', ns).text.strip(),\n",
+    "        'authors': [author.find('arxiv:name', ns).text for author in entry.findall('arxiv:author', ns)],\n",
+    "        'summary': entry.find('arxiv:summary', ns).text.strip(),\n",
+    "        'published': entry.find('arxiv:published', ns).text,\n",
+    "        'link': entry.find('arxiv:id', ns).text,\n",
+    "        'pdf_url': pdf_url\n",
+    "    }\n",
+    "    \n",
+    "    # Save PDF if requested\n",
+    "    if save_pdf and pdf_url:\n",
+    "        pdf_response = httpx.get(pdf_url)\n",
+    "        if pdf_response.status_code == 200:\n",
+    "            pdf_filename = f\"{arxiv_id}{'v'+version_num if version_num else ''}.pdf\"\n",
+    "            pdf_path = os.path.join(save_dir, pdf_filename)\n",
+    "            with open(pdf_path, 'wb') as f:\n",
+    "                f.write(pdf_response.content)\n",
+    "            result['pdf_path'] = pdf_path\n",
+    "    \n",
+    "    # Always try to get source files\n",
+    "    source_url = f'https://arxiv.org/e-print/{arxiv_id}{\"v\"+version_num if version_num else \"\"}'\n",
+    "    try:\n",
+    "        source_response = httpx.get(source_url)\n",
+    "        if source_response.status_code == 200:\n",
+    "            # Try to extract main tex file from tar archive\n",
+    "            tar_content = io.BytesIO(source_response.content)\n",
+    "            with tarfile.open(fileobj=tar_content, mode='r:*') as tar:\n",
+    "                # Look for main tex file\n",
+    "                tex_files = [f for f in tar.getnames() if f.endswith('.tex')]\n",
+    "                if tex_files:\n",
+    "                    main_tex = tar.extractfile(tex_files[0])\n",
+    "                    result['source'] = main_tex.read().decode('utf-8', errors='ignore')\n",
+    "    except Exception as e:\n",
+    "        result['source_error'] = str(e)\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2aa2e58",
    "metadata": {},
    "source": [
     "## Next:"
@@ -836,9 +1001,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
