read_gh_repo defaults to dict

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -785,7 +785,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gh_repo(path_or_url, as_dict=False, verbose=True):\n",
+    "def read_gh_repo(path_or_url, as_dict=True, verbose=True):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = _gh_ssh_from_gh_url(path_or_url)\n",
     "    path = path_or_url if not gh_ssh else _get_git_repo(gh_ssh)\n",
