pypdf2 has moved to pypdf

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -63,7 +63,7 @@
     "import requests\n",
     "import fnmatch, mimetypes\n",
     "\n",
-    "from PyPDF2 import PdfReader\n",
+    "from pypdf import PdfReader\n",
     "from toolslm.download import html2md, read_html\n",
     "\n",
     "import tempfile, subprocess, os, re, shutil\n",
@@ -432,7 +432,7 @@
     {
      "data": {
       "text/plain": [
-       "' \\n  \\n   \\nThis is a test PDF document. \\nIf you can read this, you have Adobe Acrobat Reader installed on your computer. '"
+       "' \\n \\n \\n \\n \\n \\nThis is a test PDF document. \\nIf you can read this, you have Adobe Acrobat Reader installed on your computer. '"
       ]
      },
      "execution_count": null,
