add docments comments

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -234,7 +234,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gist(url:str):\n",
+    "def read_gist(url:str  # gist URL, of gist to read\n",
+    "             ):\n",
     "    \"Returns raw gist content, or None\"\n",
     "    pattern = r'https://gist\\.github\\.com/([^/]+)/([^/]+)'\n",
     "    match = re.match(pattern, url)\n",
@@ -292,7 +293,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gh_file(url:str):\n",
+    "def read_gh_file(url:str # GitHub URL of the file to read\n",
+    "                ):\n",
     "    \"Reads the contents of a file from its GitHub URL\"\n",
     "    pattern = r'https://github\\.com/([^/]+)/([^/]+)/blob/([^/]+)/(.+)'\n",
     "    replacement = r'https://raw.githubusercontent.com/\\1/\\2/refs/heads/\\3/\\4'\n",
@@ -456,7 +458,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_pdf(file_path: str) -> str:\n",
+    "def read_pdf(file_path: str # path of PDF file to read\n",
+    "            ) -> str:\n",
     "    \"Reads the text of a PDF with PdfReader\"\n",
     "    with open(file_path, 'rb') as file:\n",
     "        reader = PdfReader(file)\n",
@@ -535,7 +538,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_google_sheet(url: str):\n",
+    "def read_google_sheet(url: str # URL of a Google Sheet to read\n",
+    "                     ):\n",
     "    \"Reads the contents of a Google Sheet into text\"\n",
     "    sheet_id = url.split('/d/')[1].split('/')[0]\n",
     "    csv_url = f'https://docs.google.com/spreadsheets/d/{sheet_id}/export?format=csv&id={sheet_id}&gid=0'\n",
@@ -612,7 +616,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gdoc(url: str):\n",
+    "def read_gdoc(url: str  # URL of Google Doc to read\n",
+    "             ):\n",
     "    \"Gets the text content of a Google Doc using html2text\"\n",
     "    import html2text\n",
     "    doc_url = url\n",
@@ -660,7 +665,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_arxiv(url:str, save_pdf:bool=False, save_dir:str='.'):\n",
+    "def read_arxiv(url:str, # arxiv PDF URL, or arxiv abstract URL, or arxiv ID\n",
+    "               save_pdf:bool=False, # True, will save the downloaded PDF\n",
+    "               save_dir:str='.' # directory in which to save the PDF\n",
+    "              ):\n",
     "    \"Get paper information from arxiv URL or ID, optionally saving PDF to disk\"\n",
     "    import re, httpx, tarfile, io, os\n",
     "    import xml.etree.ElementTree as ET\n",
@@ -795,7 +803,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_gh_repo(path_or_url:str, as_dict:bool=True, verbose:bool=False):\n",
+    "def read_gh_repo(path_or_url:str,    # Repo's GitHub URL, or GH SSH address, or file path\n",
+    "                 as_dict:bool=True, \n",
+    "                 verbose:bool=False\n",
+    "                ):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = _gh_ssh_from_gh_url(path_or_url)\n",
     "    path = path_or_url if not gh_ssh else _get_git_repo(gh_ssh)\n",
