Fix read_arxiv to use HTTPS
This causes read_arxiv to use HTTPS, resolving the problem that
arxiv.org now returns an error if you use HTTPS.

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -681,7 +681,7 @@
     "    version_num = version.group(1) if version else None\n",
     "    arxiv_id = re.sub(r'v\\d+$', '', arxiv_id)\n",
     "    \n",
-    "    api_url = f'http://export.arxiv.org/api/query?id_list={arxiv_id}'\n",
+    "    api_url = f'https://export.arxiv.org/api/query?id_list={arxiv_id}'\n",
     "    \n",
     "    response = httpx.get(api_url)\n",
     "    \n",
