fix docments docs on read_gh_repo

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -804,8 +804,8 @@
    "source": [
     "#| export\n",
     "def read_gh_repo(path_or_url:str,    # Repo's GitHub URL, or GH SSH address, or file path\n",
-    "                 as_dict:bool=True, \n",
-    "                 verbose:bool=False\n",
+    "                 as_dict:bool=True,  # if True, will return repo contents {path,content} dict\n",
+    "                 verbose:bool=False  # if True, will log paths of files being read\n",
     "                ):\n",
     "    \"Repo contents from path, GH URL, or GH SSH address\"\n",
     "    gh_ssh = _gh_ssh_from_gh_url(path_or_url)\n",
