--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a8f06e9b",
    "metadata": {},
    "source": [
     "# contextkit\n",
@@ -11,6 +12,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc208fe0",
    "metadata": {},
    "source": [
     "## Usage"
@@ -18,6 +20,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fed7fbb7",
    "metadata": {},
    "source": [
     "### Installation"
@@ -25,6 +28,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b57c681",
    "metadata": {},
    "source": [
     "```\n",
@@ -34,6 +38,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b438b7a8",
    "metadata": {},
    "source": [
     "### Using"
@@ -41,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aba618f9",
    "metadata": {},
    "source": [
     "To get context from an LLM, use one of the helper functions to pull it.\n",
@@ -51,6 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "843c67f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c187f5f",
    "metadata": {},
    "source": [
     "#### Read_X Functions"
@@ -66,6 +74,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fd5e2a3",
    "metadata": {},
    "source": [
     "Each `read_x` function is designed to work with a single argument, which is the location of the resource.  This typically means a URL or a file path."
@@ -74,12 +83,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1dda6d53",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Answer.AI\\n\\n  * __\\n  * __\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (33)\\n\\nai (20)\\n\\ncoding (5)\\n\\ncompany (2)\\n\\ncourses (1)\\n\\neducation (1)\\n\\ninterview (1)\\n\\nopen-source (14)\\n\\npolicy (4)\\n\\nproduct'"
+       "'[ Answer.AI ](./index.html)\\n\\n  * [ __ ](./index.xml)\\n  * [ __ ](https://twitter.com/answerdotai)\\n\\n# Answer.AI - Practical AI R&D\\n\\n##### Categories\\n\\nAll (40)\\n\\nai (22)\\n\\ncoding (6)\\n\\ncompany (2)\\n\\ndesign ('"
       ]
      },
      "execution_count": null,
@@ -93,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ccd7803d",
    "metadata": {},
    "source": [
     "Other arguments are always optional, but can be useful at times.  For example, the `heavy` argument in `read_url` allows you to do a heavy scrape with a contactless browser using `playwrightnb`.  "
@@ -101,6 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3f1583a1",
    "metadata": {},
    "outputs": [
     {
@@ -120,6 +132,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "763fe3ba",
    "metadata": {},
    "source": [
     "Many have been creates so far, such as"
@@ -128,6 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e6b631e1",
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +171,7 @@
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "python3",
-   "language": "python",
-   "name": "python3"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
