--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def read_url(url: str,   # URL to read\n",
+    "def read_link(url: str,   # URL to read\n",
     "             heavy: bool = False,   # Use headless browser (requires extra setup steps before use)\n",
     "             sel: Optional[str] = None,  # Css selector to pull content from\n",
     "             useJina: bool = False, # Use Jina for the markdown conversion\n",
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "read_url('https://fastht.ml/docs/', sel='#quarto-content')[:200]"
+    "read_link('https://fastht.ml/docs/', sel='#quarto-content')[:200]"
    ]
   },
   {
@@ -186,7 +186,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "read_url('https://fastht.ml/docs/',useJina=True)[:200]"
+    "read_link('https://fastht.ml/docs/',useJina=True)[:200]"
    ]
   },
   {
@@ -207,7 +207,7 @@
     }
    ],
    "source": [
-    "read_url('https://fastht.ml/docs/',sel='#quarto-margin-sidebar')"
+    "read_link('https://fastht.ml/docs/',sel='#quarto-margin-sidebar')"
    ]
   },
   {
@@ -878,7 +878,25 @@
    "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
