--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -59,7 +59,7 @@
     "import html2text\n",
     "from fastcore.all import delegates, ifnone\n",
     "\n",
-    "import re, os, glob, string\n",
+    "import re, os, glob, string, warnings, functools\n",
     "import requests\n",
     "import fnmatch, mimetypes\n",
     "\n",
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "'Title: FastHTML – fasthtml\\n\\nURL Source: https://fastht.ml/docs/\\n\\nMarkdown Content:\\nWelcome to the official FastHTML documentation.\\n\\nFastHTML is a new next-generation web framework for fast, scalable w'"
+       "'Title: FastHTML – fasthtml\\n\\nURL Source: https://fastht.ml/docs/\\n\\nPublished Time: Sun, 06 Jul 2025 21:56:52 GMT\\n\\nMarkdown Content:\\nWelcome to the official FastHTML documentation.\\n\\nFastHTML is a new nex'"
       ]
      },
      "execution_count": null,
@@ -208,6 +208,51 @@
    ],
    "source": [
     "read_link('https://fastht.ml/docs/',sel='#quarto-margin-sidebar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449d989a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def read_url(*args,**kwargs):\n",
+    "    warnings.warn(\"read_url() is deprecated, use read_link() instead\", \n",
+    "                  DeprecationWarning, stacklevel=2)\n",
+    "    return read_link(*args,**kwargs)\n",
+    "\n",
+    "read_url = functools.wraps(read_link)(read_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "922abf81",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_275424/3158535638.py:1: DeprecationWarning: read_url() is deprecated, use read_link() instead\n",
+      "  read_url('https://fastht.ml/docs/',sel='#quarto-margin-sidebar')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'## On this page\\n\\n  * Installation\\n  * Usage\\n    * Getting help from AI\\n  * Next Steps\\n  * Other languages and related projects\\n\\n  * [__Report an issue](https://github.com/AnswerDotAI/fasthtml/issues/new)\\n\\n## Other Formats\\n\\n  * [ __CommonMark](index.html.md)\\n\\n'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "read_url('https://fastht.ml/docs/',sel='#quarto-margin-sidebar')"
    ]
   },
   {
@@ -880,21 +925,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.11"
   }
  },
  "nbformat": 4,
