refine deprecation warning

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "#| export\n",
     "def read_url(*args,**kwargs):\n",
-    "    warnings.warn(\"read_url() is deprecated, use read_link() instead\", \n",
+    "    warnings.warn(\"read_url() is deprecated, use read_link() instead. It is behaviorally identical.\", \n",
     "                  DeprecationWarning, stacklevel=2)\n",
     "    return read_link(*args,**kwargs)\n",
     "\n",
