fix-read-arxiv-response-code-200

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -739,6 +739,7 @@
     "    \n",
     "    links = entry.findall('arxiv:link', ns)\n",
     "    pdf_url = next((l.get('href') for l in links if l.get('title') == 'pdf'), None)\n",
+    "    pdf_url = pdf_url.replace(\"http://\", \"https://\") if pdf_url and pdf_url.startswith(\"http://\") else pdf_url\n",
     "    \n",
     "    result = {\n",
     "        'title': entry.find('arxiv:title', ns).text.strip(),\n",
@@ -774,6 +775,28 @@
     "        result['source_error'] = str(e)\n",
     "    \n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e0fb73f-28c2-4929-b8bd-8d2d9c1d34d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('https://arxiv.org/pdf/1801.06146v5', './1801.06146.pdf')"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = read_arxiv('https://arxiv.org/pdf/1801.06146', save_pdf=True)\n",
+    "r['pdf_url'], r['pdf_path']"
    ]
   },
   {
