fix(arxiv): add follow_redirects=True to handle HTTP->HTTPS redirects

--- a/nbs/00_read.ipynb
+++ b/nbs/00_read.ipynb
@@ -739,7 +739,6 @@
     "    \n",
     "    links = entry.findall('arxiv:link', ns)\n",
     "    pdf_url = next((l.get('href') for l in links if l.get('title') == 'pdf'), None)\n",
-    "    pdf_url = pdf_url.replace(\"http://\", \"https://\") if pdf_url and pdf_url.startswith(\"http://\") else pdf_url\n",
     "    \n",
     "    result = {\n",
     "        'title': entry.find('arxiv:title', ns).text.strip(),\n",
@@ -751,7 +750,8 @@
     "    }\n",
     "    \n",
     "    if save_pdf and pdf_url:\n",
-    "        pdf_response = httpx.get(pdf_url)\n",
+    "        pdf_response = httpx.get(pdf_url, follow_redirects=True)\n",
+    "        result['pdf_url'] = str(pdf_response.url)\n",
     "        if pdf_response.status_code == 200:\n",
     "            pdf_filename = f\"{arxiv_id}{'v'+version_num if version_num else ''}.pdf\"\n",
     "            pdf_path = os.path.join(save_dir, pdf_filename)\n",
